# event-store-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  create-db.sql  docker-compose.yaml  docker-compose.yml  integration-tests.sql
_event-store-derive/src/: derive_enum.rs  derive_struct.rs  ns.rs
_event-store/benches/: exercise.rs
_event-store/src/: aggregator.rs  event.rs  lib.rs  prelude.rs  store.rs  store_query.rs  subscribable_store.rs  testhelpers.rs  utils.rs
_event-store/src/adapters/amqp/: emitter.rs
_event-store/src/adapters/emitter/: amqp.rs
_event-store/src/adapters/pg/: cache.rs  mod.rs  store.rs
_event-store/src/adapters/redis/: mod.rs
_event-store/src/adapters/store/: pg.rs
_event-store/src/adapters/stub/: emitter.rs  mod.rs
_event-store/src/internals/: mod.rs
_event-store/tests/: derive_enum.rs  pg.rs  redis_cache.rs
benches/: testhelpers.rs
event-store/: Cargo.toml  blah.rs  purge.sh
event-store-derive/: Cargo.toml  NOTES.md
event-store-derive-internals/: Cargo.toml
event-store-derive-internals/src/: lib.rs
event-store-derive/src/: derive_create_enum.rs  derive_create_struct.rs  derive_enum.rs  derive_struct.rs  derive_struct.rs.unused  enum_helpers.rs  lib.rs  ns.rs
event-store/benches/: amqp.rs  exercise.rs  pg.rs  serialize.rs  testhelpers.rs
event-store/examples/: store.rs
event-store/src/: TODO.rs  _event_replay.rs  aggregator.rs  amqp.rs  event.rs  event_context.rs  event_handler.rs  event_replay.rs  event_saver.rs  event_store.rs  lib.rs  pg.rs  prelude.rs  store.rs  store_query.rs  subscribable_store.rs  subscribe_options.rs  test_helpers.rs  testhelpers.rs  utils.rs
event-store/src/adapters/: mod.rs
event-store/src/adapters/amqp/: emitter.rs  mod.rs
event-store/src/adapters/cache/: mod.rs  pg.rs  redis.rs
event-store/src/adapters/emitter/: amqp.rs  mod.rs  stub.rs
event-store/src/adapters/pg/: cache.rs  mod.rs  store.rs
event-store/src/adapters/redis/: cache.rs  mod.rs
event-store/src/adapters/store/: mod.rs  pg.rs
event-store/src/adapters/stub/: cache.rs  emitter.rs  mod.rs  store.rs
event-store/src/cache/: mod.rs  pg.rs
event-store/src/emitter/: amqp.rs  mod.rs
event-store/src/internals/: test_helpers.rs
event-store/src/pg/: cache.rs  mod.rs  store.rs
event-store/src/store/: mod.rs  pg.rs
event-store/tests/: aggregate.rs  amqp.rs  cache_set_get.rs  create_store.rs  default_handler.rs  derive.rs  derive_enum.rs  derive_struct.rs  emit_and_receive.rs  event_replay.rs  lib.rs  pg.rs  redis_cache.rs  replay.rs  save_and_aggregate.rs  save_and_emit.rs  serde.rs  subscribe_and_receive.rs
explorer/: Cargo.toml  README.md  build-flatpak.sh  org.repositive.EventStoreExplorer.desktop  org.repositive.EventStoreExplorer.json
explorer/src/: macros.rs  main.rs
explorer/src/glade/: main.glade
src/: event.rs  lib.rs  pg.rs  testhelpers.rs
src/adapters/: mod.rs
src/adapters/amqp/: emitter.rs
src/adapters/pg/: cache.rs  mod.rs  store.rs
src/adapters/stub/: emitter.rs
src/eventstore/: mock.rs  mod.rs  postgres.rs
tests/: amqp.rs  pg.rs  postgres.rs
unifier/: .gitignore  Cargo.toml  README.md
unifier/src/: config.rs  event.rs  main.rs
