[package]
name = "event-store-rs"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[badges]
travis-ci = { repository = "jamwaffles/event-store-rs", branch = "master" }

[dependencies]
postgres = { version = "0.15.2", optional = true }

[features]
default = [ "postgres_support" ]
postgres_support = [ "postgres" ]
