[package]
name = "event-store-rs"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[badges]
travis-ci = { repository = "jamwaffles/event-store-rs", branch = "master" }

[dependencies]
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
postgres = { version = "0.15.2", features = [ "with-serde_json" ] }
fallible-iterator = "0.1.5"
sha2 = "0.7.1"
