[package]
name = "event-store-derive"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
syn = { version = "0.15.26", features = [ "extra-traits" ] }
quote = "0.6.11"
proc-macro2 = "0.4.27"
serde = "1.0.87"
serde_derive = "1.0.87"
event-store-derive-internals = { path = "../event-store-derive-internals" }

[lib]
proc-macro = true

