[package]
name = "event-store-derive"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
syn = { version = "0.15.34", features = [ "extra-traits" ] }
quote = "1.0.3"
proc-macro2 = "0.4.30"
serde = "1.0.91"
serde_derive = "1.0.91"
event-store-derive-internals = { path = "../event-store-derive-internals" }

[lib]
proc-macro = true

