[package]
authors = ["James Waples <james@wapl.es>"]
name = "event-store"
version = "0.1.0"
edition = "2018"

[badges.travis-ci]
branch = "master"
repository = "repositive/event-store-rs"

[dependencies]
fallible-iterator = "0.1.6"
futures = "0.1.25"
lapin-futures = "0.15.0"
log = "0.4.6"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
redis = "0.9.1"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
sha2 = "0.8.0"
tokio = { version = "0.1.13", features = ["async-await-preview"] }
tokio-async-await = "0.1.4"
# tokio-core = "0.1.17"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.event-store-derive]
path = "../event-store-derive"

[dependencies.event-store-derive-internals]
path = "../event-store-derive-internals"

[dependencies.postgres]
features = ["with-serde_json", "with-uuid", "with-chrono"]
version = "0.15.2"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.5.1"

[dev-dependencies]
criterion = "0.2.5"
env_logger = "0.6.0"
pretty_env_logger = "0.3.0"
