[package]
authors = ["James Waples <james@wapl.es>"]
name = "event-store"
version = "0.1.0"
edition = "2018"

[badges.travis-ci]
branch = "master"
repository = "repositive/event-store-rs"

[dependencies]
fallible-iterator = "0.1.6"
futures = "0.1.27"
lapin-futures = "0.18.0"
log = "0.4.6"
r2d2 = "0.8.4"
r2d2_postgres = "0.15.0-rc.1"
redis = "0.10.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
sha2 = "0.8.0"
tokio = { version = "0.1.19", features = ["async-await-preview"] }
tokio-async-await = "0.1.7"
url = "1.7.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.event-store-derive]
path = "../event-store-derive"

[dependencies.event-store-derive-internals]
path = "../event-store-derive-internals"

[dependencies.postgres]
version = "0.16.0-rc.1"
features = ["with-serde_json-1", "with-uuid-0_7", "with-chrono-0_4"]

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.5.1"

[dev-dependencies]
criterion = "0.2.11"
env_logger = "0.6.1"
pretty_env_logger = "0.3.0"

[[bench]]
name = "serialize"
harness = false
