[package]
name = "explorer"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
postgres = "0.15.2"
event-store = { path = "../event-store" }
event-store-derive = { path = "../event-store-derive" }
event-store-derive-internals = { path = "../event-store-derive-internals" }
tokio = { version = "0.1.14", features = ["async-await-preview"] }
tokio-async-await = "0.1.5"
pretty_env_logger = "0.3.0"
serde_json = "1.0.35"
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0.84"
serde = "1.0.84"
log = "0.4.6"
structopt = "0.2.14"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.5.1"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]
